styles/sections/_task_order.scss
.task-order-list {
  margin-top: 6 * $gap;
}

.task-order-card .label {
  font-size: $small-font-size;
  margin-right: 2 * $gap;
  min-width: 7rem;
  display: flex;
  justify-content: space-around;
}

.task-order-card__buttons .usa-button {
  min-width: 10rem;
}

.task-order-card__buttons .usa-button-secondary {
  min-width: 14rem;
}

.task-order {
  margin-top: $gap * 4;
  width: 900px;

  hr {
    border: 0;
    border-bottom: 1px solid $color-gray-light;
    margin-top: $gap * 4;
    margin-bottom: $gap * 4;
  }

  table {
    margin-top: 1rem;
  }

  .col {
    flex-grow: 1;
  }

  .h1,
  .h3 {
    margin-bottom: $gap * 2;
  }

  .h4 {
    margin-top: $gap * 2;
  }

  .totals-box {
    padding: $gap * 4;
    padding-top: $gap * 2;
    flex-grow: unset;
    margin-left: $gap * 6;
    margin-top: $gap * 3;
    width: 35%;
    height: fit-content;
    background-color: $color-gray-lightest;
  }

  &.task_order__form {
    .totals-box {
      margin-top: 0;
    }

    .icon {
      left: 100%;
    }

    .usa-input--validation--dollars input {
      max-width: unset;
    }

    .usa-form-group-year {
      margin-right: 0.4rem;
    }

    .usa-alert {
      margin: 1.5em 0;
    }

    .usa-input {
      margin: $gap 0;
    }

    .task-order__loa-fieldset {
      .usa-input {
        margin: 0;
      }

      input {
        margin: $gap 0;
        max-width: unset;
      }

      input:first-child {
        margin-top: 0;
      }

      input:last-child {
        margin-bottom: 0;
      }
    }

    .task-order__pdf-help-text {
      margin-bottom: 4 * $gap;
    }
  }

  .row.row__form-fields {
    .col {
      margin-left: $gap;
    }

    .col:first-child {
      margin-left: 0;
    }
  }

  .panel {
    @include shadow-panel;
  }

  .alert .alert__actions {
    margin-top: 2 * $gap;
  }

  .panel {
    width: 100%;
  }

  .label--pending,
  .label--started {
    background-color: $color-gold;
  }

  .label--active {
    background-color: $color-green;
  }

  .label--expired {
    background-color: $color-red;
  }

  .task-order-document-link {
    .task-order-document-link__icon {
      padding-top: 0.5rem;
    }

    .task-order-document-description {
      padding-left: 3rem;
      font-style: italic;
    }
  }
}

